--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -1,4 +1,31 @@
-<h2>🏠 Heroes App</h2>
-<hr>
-<router-outlet></router-outlet>
+<mat-sidenav-container fullscreen>
+  <mat-sidenav #sidenav mode="side">
+    <mat-toolbar><h1>Menú</h1></mat-toolbar>
+    <mat-nav-list>
+      <a mat-list-item routerLink="./list" (click)="sidenav.toggle()">
+        <mat-icon mat-list-icon>label</mat-icon>&nbsp;
+        <span>Listado de Héroes</span>
+      </a>
+      <a mat-list-item routerLink="./add" (click)="sidenav.toggle()">
+        <mat-icon mat-list-icon>add</mat-icon>&nbsp;
+        <span>Añadir Héroe</span>
+      </a>
+      <a mat-list-item routerLink="./search" (click)="sidenav.toggle()">
+        <mat-icon mat-list-icon>search</mat-icon>&nbsp;
+        <span>Buscar Héroe</span>
+      </a>
+    </mat-nav-list>
+  </mat-sidenav>
 
+  <mat-toolbar>
+    <button mat-icon-button (click)="sidenav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span class="spacer"></span>
+    <button mat-button>Logout</button>
+  </mat-toolbar>
+
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+</mat-sidenav-container>
