--- a/src/app/heroes/pages/list/list.component.html
+++ b/src/app/heroes/pages/list/list.component.html
@@ -1,1 +1,18 @@
-<p>list works!</p>
+<h1>Listado de Héroes</h1>
+<mat-divider></mat-divider>
+
+<div fxLayout="row wrap"
+     fxLayout.xs="column"
+     fxLayoutAlign="center"
+     fxLayoutGap="20px">
+
+  <div fxFlex="20"
+       fxFlex.sm="30"
+       fxFlex.lg="15"
+       *ngFor="let hero of heroes">
+
+    <app-hero-card [hero]="hero"></app-hero-card>
+  </div>
+
+</div>
+
