--- a/src/app/heroes/pages/search/search.component.html
+++ b/src/app/heroes/pages/search/search.component.html
@@ -1,1 +1,34 @@
-<p>search works!</p>
+
+<div fxLayout="column">
+  <div>
+    <h1>Buscador de héroes</h1>
+    <mat-divider></mat-divider>
+  </div>
+  <div fxLayout="column">
+    <h3>Buscador</h3>
+    <mat-form-field appearance="fill">
+      <input matInput
+             type="text"
+             aria-label="Hero"
+             placeholder="Escribe el nombre de un héroe"
+             (input)="searching()"
+             [(ngModel)]="searchTerm"
+             [matAutocomplete]="auto">
+
+      <mat-autocomplete autoActiveFirstOption
+                        #auto="matAutocomplete"
+                        (optionSelected)="selectedOption($event)">
+
+        <mat-option *ngFor="let hero of heroes" [value]="hero">
+          {{ hero.superhero }}
+        </mat-option>
+        <mat-option *ngIf="heroes.length == 0 && searchTerm.length > 0" [value]="">
+          No se encontraron términos similares a {{ searchTerm }} en la búsqueda
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+  </div>
+  <div>
+    <pre>{{ selectedHero | json }}</pre>
+  </div>
+</div>
