--- a/src/app/heroes/pages/add/add.component.html
+++ b/src/app/heroes/pages/add/add.component.html
@@ -1,1 +1,71 @@
-<p>add works!</p>
+<h1>{{ (hero.id) ? 'Editar' : 'Nuevo' }} Héroe<small> - {{ hero.superhero }}</small></h1>
+
+<div fxLayout="row"
+     fxLayoutGap="40px"
+     fxLayout.xs="column">
+
+  <div fxFlex="50"
+       fxLayout="column">
+
+    <div fxLayout="row"
+         fxLayoutGap="20px"
+         fxLayout.xs="column">
+
+      <mat-form-field>
+        <mat-label>Superhéroe</mat-label>
+        <input matInput type="text" [(ngModel)]="hero.superhero" required>
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Alter Ego</mat-label>
+        <input matInput type="text" [(ngModel)]="hero.alter_ego" required>
+      </mat-form-field>
+    </div>
+
+    <mat-form-field>
+      <mat-label>Primera Aparición</mat-label>
+      <input matInput type="text" [(ngModel)]="hero.first_appearance" required>
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Personajes</mat-label>
+      <input matInput type="text" [(ngModel)]="hero.characters" required>
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Creador</mat-label>
+      <mat-select [(ngModel)]="hero.publisher" required>
+        <mat-option *ngFor="let publisher of publishers" [value]="publisher">
+          {{ publisher }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Foto URL</mat-label>
+      <input matInput type="url" [(ngModel)]="hero.alt_img" required>
+    </mat-form-field>
+
+    <br>
+
+    <div fxLayout>
+      <button mat-raised-button color="primary" (click)="saveHero()">
+        <mat-icon>edit</mat-icon>
+        {{ (hero.id) ? 'Actualizar' : 'Crear' }}
+      </button>
+
+      <span class="spacer"></span>
+
+      <button mat-raised-button color="warn" *ngIf="hero.id" (click)="deleteHero()">
+        <mat-icon>delete</mat-icon>
+        Eliminar
+      </button>
+    </div>
+
+  </div>
+
+  <div fxFlex="50"
+       fxLayoutAlign="center center">
+    <img [src]="hero | heroImg" alt="">
+  </div>
+</div>
