--- a/src/app/shared/error-page/error-page.component.html
+++ b/src/app/shared/error-page/error-page.component.html
@@ -2,6 +2,7 @@
 <ul>
   <li><a routerLink="/auth/login">Ir a Login</a></li>
   <li><a routerLink="/auth/register">Ir a Registro</a></li>
+  <li><a routerLink="/heroes">Ir al Listado</a></li>
 </ul>
 
 
